mosquitto/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  selector:
    dojo/app: mosquitto
  ports:
  - protocol: TCP
    port: 1883
    targetPort: 1883
  - protocol: TCP
    port: 9001
    targetPort: 9001
