mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mqtt.telco.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto-service
            port:
              number: 1883
